--- a/style.css
+++ b/style.css
@@ -1,12 +1,27 @@
+#title {
+    width: 100%;
+    height: 70px;
+    margin-bottom: 20px;
+}
+
+#main {
+
+}
+
 #table {
     border-collapse: collapse;
     width: 600px;
     height: 600px;
-    border-style:dotted;
+    border-style: dashed;
 }
 
 .label {
+    width: 100%;
+    height: 100%;
+
+    display: flex;
     background-color: darkblue;
-    text-align: center;
     color: azure;
+    justify-content: center;
+    align-items: center;
 }
